# rust_satellite

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile.cross  README.md  build.rs
.devcontainer/: devcontainer.json
bin_comm/: Cargo.toml
bin_comm/src/: lib.rs  stream_utils.rs
common/src/: lib.rs
companion/: Cargo.toml
companion/src/: keyvalue.rs  lib.rs  receiver.rs  sender.rs
companion_to_device/: Cargo.toml
companion_to_device/src/: lib.rs
elgato-streamdeck-local/: Cargo.toml
elgato-streamdeck-local/src/: asynchronous.rs  images.rs  info.rs  lib.rs  util.rs
gateway/: Cargo.toml
gateway/src/: keyvalue.rs  lib.rs  main.rs  satellite.rs  stream_utils.rs
gateway_devices/: Cargo.toml
gateway_devices/src/: lib.rs
leaf/: Cargo.toml
leaf/src/: lib.rs  main.rs
leaf_comm/: Cargo.toml
leaf_comm/src/: lib.rs
pumps/: Cargo.toml
pumps/src/: lib.rs
rust_satellite/: Cargo.toml  Dockerfile.cross  README.md  build.rs
rust_satellite/examples/: fixlinks.rs
rust_satellite/src/: keyvalue.rs  lib.rs  main.rs
simple_deck/: Cargo.toml
simple_deck/src/: main.rs
src/: lib.rs  main.rs
streamdeck/: Cargo.toml
streamdeck/src/: lib.rs
streamduck/: Cargo.toml
streamduck/src/: main.rs
teensy_host/: Cargo.toml
teensy_host/src/: lib.rs  main.rs
teensy_lib/: Cargo.toml
teensy_lib/src/: lib.rs
teensy_sim/: Cargo.toml
teensy_sim/src/: main.rs
traits/: Cargo.toml
traits/src/: companion.rs  device.rs  lib.rs
