[package]
name = "rust_satellite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
