[package]
name = "rust_satellite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "socket2", "net", "time"] }
tokio-util = { version = "0.7.8", features = ["io", "io-util", "futures-io"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
