[package]
name = "companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
common = { version = "0.1.0", path = "../common" }
elgato-streamdeck = { version = "0.4.1", path = "../elgato-streamdeck" }
image = "0.24.7"
nom = "7.1.3"
tokio = { version = "1.32.0", features = ["io-util", "sync"] }
tracing = "0.1.37"
traits = { version = "0.1.0", path = "../traits" }
