[package]
name = "companion_to_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
base64 = "0.21.4"
elgato-streamdeck = { version = "0.4.1", path = "../elgato-streamdeck", features = ["async"] }
image = "0.24.7"
nom = "7.1.3"
tokio = { version = "1.32.0", features = ["io-util"] }
tracing = "0.1.37"
