[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
clap = { version = "4.4.3", features = ["derive"] }
elgato-streamdeck = { version = "0.4.1", path = "../elgato-streamdeck" }
image = "0.24.7"
nom = "7.1.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
