[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
base64 = "0.21.4"
bin_comm = { version = "0.1.0", path = "../bin_comm" }
bincode = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
companion = { version = "0.1.0", path = "../companion" }
elgato-streamdeck = { version = "0.4.1", path = "../elgato-streamdeck" }
futures = "0.3.28"
gateway_devices = { version = "0.1.0", path = "../gateway_devices" }
image = "0.24.7"
lru = "0.11.1"
nom = "7.1.3"
pumps = { version = "0.1.0", path = "../pumps" }
serde = "1.0.188"
sha2 = "0.10.7"
streamdeck = { version = "0.1.0", path = "../streamdeck" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
traits = { version = "0.1.0", path = "../traits" }
