[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
companion = { version = "0.1.0", path = "../companion", features=["async"] }
elgato-streamdeck = { version = "0.4.1", path = "../elgato-streamdeck" }
gateway_devices = { version = "0.1.0", path = "../gateway_devices" }
pumps = { version = "0.1.0", path = "../pumps" }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
traits = { version = "0.1.0", path = "../traits" }
