[package]
name = "gateway_devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bin_comm = { version = "0.1.0", path = "../bin_comm" }
tokio = { version = "1.32.0", features = ["io-util"] }
tracing = "0.1.37"
traits = { version = "0.1.0", path = "../traits" }
