[package]
name = "rust_satellite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
clap = { version = "4.4.2", features = ["derive"] }
elgato-streamdeck = { git = "https://github.com/streamduck-org/elgato-streamdeck.git", version = "0.4.1", features = ["async"] }
image = "0.24.7"
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
streamdeck = { path = "../rust-streamdeck-updated" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io", "io-util", "futures-io"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

