[package]
name = "rust_satellite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.2", features = ["derive"] }
companion = { version = "0.1.0", path = "../companion" }
elgato-streamdeck = { path = "../elgato-streamdeck", features = ["async"] }
pumps = { version = "0.1.0", path = "../pumps" }
streamdeck = { version = "0.1.0", path = "../streamdeck" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io", "io-util", "futures-io"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
traits = { version = "0.1.0", path = "../traits" }

