[package]
name = "streamdeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elgato-streamdeck = { version = "0.4.1", path = "../elgato-streamdeck", features = ["async"] }
tracing = "0.1.37"
traits = { version = "0.1.0", path = "../traits" }
