[package]
name = "streamduck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elgato-streamdeck = { git = "https://github.com/streamduck-org/elgato-streamdeck.git", version = "0.4.1" }
image = "0.24.7"
