[package]
name = "teensy_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
companion = { version = "0.1.0", path = "../companion" }
elgato-streamdeck-local = { version = "0.4.1", path = "../elgato-streamdeck-local" }
image = "0.24.7"
tokio = { version = "1.35.1", features = ["full"] }
