[package]
name = "teensy_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
arduino_allocator = []

[dependencies]
anyhow = {version="1.0.79", default-features = false }
elgato-streamdeck-local = { version = "0.4.1", path = "../elgato-streamdeck-local" }
leaf_comm = { version = "0.1.0", path = "../leaf_comm" }
postcard = "1.0.8"
serde = { version = "1.0.194", default-features = false, features = ["derive"] }
