[package]
name = "teensy_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
hidapi = "2.4.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["net", "full"] }
