[package]
name = "traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
base64 = "0.21.4"
common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.188", features = ["derive"] }
